[package]
name = "h4_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
h4_shared = { path = "../h4_shared" }
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
] }
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0.102"
